--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=demo
 
-<<<<<<< HEAD
 spring.datasource.url=jdbc:postgresql://localhost:5432/principal
 spring.datasource.username=postgres
 spring.datasource.password=202020
@@ -14,7 +13,7 @@ spring.datasource.hikari.max-lifetime=1200000
 spring.datasource.hikari.auto-commit=true
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -26,17 +25,3 @@ spring.flyway.user=postgres
 spring.flyway.password=202020
 
 server.port=8081
-=======
-spring.datasource.url=jdbc:mysql://localhost:3306/principal
-spring.datasource.username=Galosk
-spring.datasource.password=202020
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
-
->>>>>>> origin/main
